src/main/resources/jkube/common/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: ${project.artifactId}
  type: ClusterIP
