src/main/resources/jkube/common/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${project.artifactId}-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: ${env.CI_ENVIRONMENT_SLUG}-k8s.tre-pa.jus.br
    http:
      paths:
      - backend:
          service:
            name: ${project.artifactId}-service
            port:
              number: 8080 
        path: /${project.artifactId}
        pathType: Prefix
